bk_ida/gccida/g0/move_by_pieces
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/expr.c:1858:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code icode; // [rsp+6Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/expr.c:1860:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode; // [rsp+7Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/expr.c:1863:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+8Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/expr.c:1942:19: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
move_by_pieces_1( insn_data_0[icode].genfun, mode, &data); 
                  ^~~~~~~~~~~
                  insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/move_by_pieces/src/obj/expr.o] Error 1
